# pyhiir

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  allpass.py  dev-requirements.txt  hiir.py  pyproject.toml  setup.py  test.py
.github/workflows/: python-publish.yml
hiir/: CMakeLists.txt  wrapper.cpp
src/pyhiir/: allpass.py  hiir.py
tests/: example.py  test_hiir.py
travis/: build-wheels.sh
