set(TARGET hiir)

set(SOURCES 
    ${CMAKE_CURRENT_LIST_DIR}/hiir/def.h
    ${CMAKE_CURRENT_LIST_DIR}/hiir/Downsampler2x2F64Sse2.h
    ${CMAKE_CURRENT_LIST_DIR}/hiir/Downsampler2x2F64Sse2.hpp
    ${CMAKE_CURRENT_LIST_DIR}/hiir/Downsampler2x3dnow.h
    ${CMAKE_CURRENT_LIST_DIR}/hiir/Downsampler2x3dnow.hpp
    ${CMAKE_CURRENT_LIST_DIR}/hiir/Downsampler2x4F64Avx.h
    ${CMAKE_CURRENT_LIST_DIR}/hiir/Downsampler2x4F64Avx.hpp
    ${CMAKE_CURRENT_LIST_DIR}/hiir/Downsampler2x4Neon.h
    ${CMAKE_CURRENT_LIST_DIR}/hiir/Downsampler2x4Neon.hpp
    ${CMAKE_CURRENT_LIST_DIR}/hiir/Downsampler2x4Sse.h
    ${CMAKE_CURRENT_LIST_DIR}/hiir/Downsampler2x4Sse.hpp
    ${CMAKE_CURRENT_LIST_DIR}/hiir/Downsampler2x8Avx.h
    ${CMAKE_CURRENT_LIST_DIR}/hiir/Downsampler2x8Avx.hpp
    ${CMAKE_CURRENT_LIST_DIR}/hiir/Downsampler2x8F64Avx512.h
    ${CMAKE_CURRENT_LIST_DIR}/hiir/Downsampler2x8F64Avx512.hpp
    ${CMAKE_CURRENT_LIST_DIR}/hiir/Downsampler2x16Avx512.h
    ${CMAKE_CURRENT_LIST_DIR}/hiir/Downsampler2x16Avx512.hpp
    ${CMAKE_CURRENT_LIST_DIR}/hiir/Downsampler2xF64Fpu.h
    ${CMAKE_CURRENT_LIST_DIR}/hiir/Downsampler2xF64Sse2.h
    ${CMAKE_CURRENT_LIST_DIR}/hiir/Downsampler2xF64Sse2.hpp
    ${CMAKE_CURRENT_LIST_DIR}/hiir/Downsampler2xFpu.h
    ${CMAKE_CURRENT_LIST_DIR}/hiir/Downsampler2xFpuTpl.h
    ${CMAKE_CURRENT_LIST_DIR}/hiir/Downsampler2xFpuTpl.hpp
    ${CMAKE_CURRENT_LIST_DIR}/hiir/Downsampler2xNeon.h
    ${CMAKE_CURRENT_LIST_DIR}/hiir/Downsampler2xNeon.hpp
    ${CMAKE_CURRENT_LIST_DIR}/hiir/Downsampler2xNeonOld.h
    ${CMAKE_CURRENT_LIST_DIR}/hiir/Downsampler2xNeonOld.hpp
    ${CMAKE_CURRENT_LIST_DIR}/hiir/Downsampler2xSse.h
    ${CMAKE_CURRENT_LIST_DIR}/hiir/Downsampler2xSse.hpp
    ${CMAKE_CURRENT_LIST_DIR}/hiir/Downsampler2xSseOld.h
    ${CMAKE_CURRENT_LIST_DIR}/hiir/Downsampler2xSseOld.hpp
    ${CMAKE_CURRENT_LIST_DIR}/hiir/fnc_neon.h
    ${CMAKE_CURRENT_LIST_DIR}/hiir/fnc_neon.hpp
    ${CMAKE_CURRENT_LIST_DIR}/hiir/fnc.h
    ${CMAKE_CURRENT_LIST_DIR}/hiir/fnc.hpp
    ${CMAKE_CURRENT_LIST_DIR}/hiir/license.txt
    ${CMAKE_CURRENT_LIST_DIR}/hiir/PhaseHalfPi2F64Sse2.h
    ${CMAKE_CURRENT_LIST_DIR}/hiir/PhaseHalfPi2F64Sse2.hpp
    ${CMAKE_CURRENT_LIST_DIR}/hiir/PhaseHalfPi3dnow.h
    ${CMAKE_CURRENT_LIST_DIR}/hiir/PhaseHalfPi3dnow.hpp
    ${CMAKE_CURRENT_LIST_DIR}/hiir/PhaseHalfPi4F64Avx.h
    ${CMAKE_CURRENT_LIST_DIR}/hiir/PhaseHalfPi4F64Avx.hpp
    ${CMAKE_CURRENT_LIST_DIR}/hiir/PhaseHalfPi4Neon.h
    ${CMAKE_CURRENT_LIST_DIR}/hiir/PhaseHalfPi4Neon.hpp
    ${CMAKE_CURRENT_LIST_DIR}/hiir/PhaseHalfPi4Sse.h
    ${CMAKE_CURRENT_LIST_DIR}/hiir/PhaseHalfPi4Sse.hpp
    ${CMAKE_CURRENT_LIST_DIR}/hiir/PhaseHalfPi8Avx.h
    ${CMAKE_CURRENT_LIST_DIR}/hiir/PhaseHalfPi8Avx.hpp
    ${CMAKE_CURRENT_LIST_DIR}/hiir/PhaseHalfPi8F64Avx512.h
    ${CMAKE_CURRENT_LIST_DIR}/hiir/PhaseHalfPi8F64Avx512.hpp
    ${CMAKE_CURRENT_LIST_DIR}/hiir/PhaseHalfPi16Avx512.h
    ${CMAKE_CURRENT_LIST_DIR}/hiir/PhaseHalfPi16Avx512.hpp
    ${CMAKE_CURRENT_LIST_DIR}/hiir/PhaseHalfPiF64Fpu.h
    ${CMAKE_CURRENT_LIST_DIR}/hiir/PhaseHalfPiF64Sse2.h
    ${CMAKE_CURRENT_LIST_DIR}/hiir/PhaseHalfPiF64Sse2.hpp
    ${CMAKE_CURRENT_LIST_DIR}/hiir/PhaseHalfPiFpu.h
    ${CMAKE_CURRENT_LIST_DIR}/hiir/PhaseHalfPiFpuTpl.h
    ${CMAKE_CURRENT_LIST_DIR}/hiir/PhaseHalfPiFpuTpl.hpp
    ${CMAKE_CURRENT_LIST_DIR}/hiir/PhaseHalfPiNeon.h
    ${CMAKE_CURRENT_LIST_DIR}/hiir/PhaseHalfPiNeon.hpp
    ${CMAKE_CURRENT_LIST_DIR}/hiir/PhaseHalfPiSse.h
    ${CMAKE_CURRENT_LIST_DIR}/hiir/PhaseHalfPiSse.hpp
    ${CMAKE_CURRENT_LIST_DIR}/hiir/PolyphaseIir2Designer.h
    ${CMAKE_CURRENT_LIST_DIR}/hiir/StageData3dnow.h
    ${CMAKE_CURRENT_LIST_DIR}/hiir/StageDataAvx.h
    ${CMAKE_CURRENT_LIST_DIR}/hiir/StageDataAvx512.h
    ${CMAKE_CURRENT_LIST_DIR}/hiir/StageDataF64Avx.h
    ${CMAKE_CURRENT_LIST_DIR}/hiir/StageDataF64Avx512.h
    ${CMAKE_CURRENT_LIST_DIR}/hiir/StageDataF64Sse2.h
    ${CMAKE_CURRENT_LIST_DIR}/hiir/StageDataNeonV2.h
    ${CMAKE_CURRENT_LIST_DIR}/hiir/StageDataNeonV4.h
    ${CMAKE_CURRENT_LIST_DIR}/hiir/StageDataSse.h
    ${CMAKE_CURRENT_LIST_DIR}/hiir/StageProc2F64Sse2.h
    ${CMAKE_CURRENT_LIST_DIR}/hiir/StageProc2F64Sse2.hpp
    ${CMAKE_CURRENT_LIST_DIR}/hiir/StageProc3dnow.h
    ${CMAKE_CURRENT_LIST_DIR}/hiir/StageProc3dnow.hpp
    ${CMAKE_CURRENT_LIST_DIR}/hiir/StageProc4F64Avx.h
    ${CMAKE_CURRENT_LIST_DIR}/hiir/StageProc4F64Avx.hpp
    ${CMAKE_CURRENT_LIST_DIR}/hiir/StageProc4Neon.h
    ${CMAKE_CURRENT_LIST_DIR}/hiir/StageProc4Neon.hpp
    ${CMAKE_CURRENT_LIST_DIR}/hiir/StageProc4Sse.h
    ${CMAKE_CURRENT_LIST_DIR}/hiir/StageProc4Sse.hpp
    ${CMAKE_CURRENT_LIST_DIR}/hiir/StageProc8Avx.h
    ${CMAKE_CURRENT_LIST_DIR}/hiir/StageProc8Avx.hpp
    ${CMAKE_CURRENT_LIST_DIR}/hiir/StageProc8F64Avx512.h
    ${CMAKE_CURRENT_LIST_DIR}/hiir/StageProc8F64Avx512.hpp
    ${CMAKE_CURRENT_LIST_DIR}/hiir/StageProc16Avx512.h
    ${CMAKE_CURRENT_LIST_DIR}/hiir/StageProc16Avx512.hpp
    ${CMAKE_CURRENT_LIST_DIR}/hiir/StageProcF64Sse2.h
    ${CMAKE_CURRENT_LIST_DIR}/hiir/StageProcF64Sse2.hpp
    ${CMAKE_CURRENT_LIST_DIR}/hiir/StageProcFpu.h
    ${CMAKE_CURRENT_LIST_DIR}/hiir/StageProcFpu.hpp
    ${CMAKE_CURRENT_LIST_DIR}/hiir/StageProcNeonV2.h
    ${CMAKE_CURRENT_LIST_DIR}/hiir/StageProcNeonV2.hpp
    ${CMAKE_CURRENT_LIST_DIR}/hiir/StageProcNeonV4.h
    ${CMAKE_CURRENT_LIST_DIR}/hiir/StageProcNeonV4.hpp
    ${CMAKE_CURRENT_LIST_DIR}/hiir/StageProcSseV2.h
    ${CMAKE_CURRENT_LIST_DIR}/hiir/StageProcSseV2.hpp
    ${CMAKE_CURRENT_LIST_DIR}/hiir/StageProcSseV4.h
    ${CMAKE_CURRENT_LIST_DIR}/hiir/StageProcSseV4.hpp
    ${CMAKE_CURRENT_LIST_DIR}/hiir/Upsampler2x2F64Sse2.h
    ${CMAKE_CURRENT_LIST_DIR}/hiir/Upsampler2x2F64Sse2.hpp
    ${CMAKE_CURRENT_LIST_DIR}/hiir/Upsampler2x3dnow.h
    ${CMAKE_CURRENT_LIST_DIR}/hiir/Upsampler2x3dnow.hpp
    ${CMAKE_CURRENT_LIST_DIR}/hiir/Upsampler2x4F64Avx.h
    ${CMAKE_CURRENT_LIST_DIR}/hiir/Upsampler2x4F64Avx.hpp
    ${CMAKE_CURRENT_LIST_DIR}/hiir/Upsampler2x4Neon.h
    ${CMAKE_CURRENT_LIST_DIR}/hiir/Upsampler2x4Neon.hpp
    ${CMAKE_CURRENT_LIST_DIR}/hiir/Upsampler2x4Sse.h
    ${CMAKE_CURRENT_LIST_DIR}/hiir/Upsampler2x4Sse.hpp
    ${CMAKE_CURRENT_LIST_DIR}/hiir/Upsampler2x8Avx.h
    ${CMAKE_CURRENT_LIST_DIR}/hiir/Upsampler2x8Avx.hpp
    ${CMAKE_CURRENT_LIST_DIR}/hiir/Upsampler2x8F64Avx512.h
    ${CMAKE_CURRENT_LIST_DIR}/hiir/Upsampler2x8F64Avx512.hpp
    ${CMAKE_CURRENT_LIST_DIR}/hiir/Upsampler2x16Avx512.h
    ${CMAKE_CURRENT_LIST_DIR}/hiir/Upsampler2x16Avx512.hpp
    ${CMAKE_CURRENT_LIST_DIR}/hiir/Upsampler2xF64Fpu.h
    ${CMAKE_CURRENT_LIST_DIR}/hiir/Upsampler2xF64Sse2.h
    ${CMAKE_CURRENT_LIST_DIR}/hiir/Upsampler2xF64Sse2.hpp
    ${CMAKE_CURRENT_LIST_DIR}/hiir/Upsampler2xFpu.h
    ${CMAKE_CURRENT_LIST_DIR}/hiir/Upsampler2xFpuTpl.h
    ${CMAKE_CURRENT_LIST_DIR}/hiir/Upsampler2xFpuTpl.hpp
    ${CMAKE_CURRENT_LIST_DIR}/hiir/Upsampler2xNeon.h
    ${CMAKE_CURRENT_LIST_DIR}/hiir/Upsampler2xNeon.hpp
    ${CMAKE_CURRENT_LIST_DIR}/hiir/Upsampler2xNeonOld.h
    ${CMAKE_CURRENT_LIST_DIR}/hiir/Upsampler2xNeonOld.hpp
    ${CMAKE_CURRENT_LIST_DIR}/hiir/Upsampler2xSse.h
    ${CMAKE_CURRENT_LIST_DIR}/hiir/Upsampler2xSse.hpp
    ${CMAKE_CURRENT_LIST_DIR}/hiir/Upsampler2xSseOld.h
    ${CMAKE_CURRENT_LIST_DIR}/hiir/Upsampler2xSseOld.hpp
    ${CMAKE_CURRENT_LIST_DIR}/wrapper.cpp
)

add_library(${TARGET} SHARED ${SOURCES})
target_include_directories(${TARGET} PRIVATE ${CMAKE_CURRENT_LIST_DIR}/)
# Move the target to CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE after build
add_custom_command(TARGET ${TARGET} POST_BUILD
    COMMAND ${CMAKE_COMMAND} -E copy $<TARGET_FILE:${TARGET}> ${CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE}/$<TARGET_FILE_NAME:${TARGET}>
)